--- a/css/app.css
+++ b/css/app.css
@@ -11,6 +11,15 @@ aquamarine: #02ccba
 html {
     box-sizing: border-box;
 }
+.destination:hover h2 {
+    transform: rotate(0deg);
+}
+h2 {
+    margin: 0;
+    transform: rotate(-45deg);
+    transition: transform 0.5s;
+    text-shadow: 0 0 5px #01579b;
+}
 
 *,
 *::before,
